--- a/templates/landing.html
+++ b/templates/landing.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'landing_base.html' %}
 {% block content %}
 <header class="w-full border-b bg-white">
 <div class="max-w-7xl mx-auto flex items-center justify-between p-4">
